# The-Overcoded-Pong-Game

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  notes.txt
include/: Configuration.h  GameObjects.h  Utilities.h
include/Configuration/: Control.h  Graphics.h  Level.h
include/GameObjects/: Ball.h  Racket.h
include/Utilities/: Calculations.h  Control.h
sources/: SFML_source_building.md
sources/custom/: CMakePresets.json  Note.md
src/: CMakeLists.txt
src/Configuration/: CMakeLists.txt
src/GameObjects/: CMakeLists.txt  Racket.cpp
src/Pong/: CMakeLists.txt  main.cpp
src/Utilities/: CMakeLists.txt  Calculations.cpp  Control.cpp
